--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,2 @@
-nothing
+{<img src="https://travis-ci.org/leonko/stm.png" />}[https://travis-ci.org/leonko/stm]
+{<img src="https://coveralls.io/repos/leonko/stm/badge.png" />}[https://coveralls.io/r/leonko/stm]
